--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="vikingchess.userinterfacechapter3.MainActivity">
+    tools:context="vikingchess.userinterfacechapter3.MainActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <LinearLayout
-        android:layout_width="369dp"
-        android:layout_height="476dp"
+        android:layout_width="0dp"
+        android:layout_height="700dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="27dp">
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp">
 
         <TextView
             android:id="@+id/helloText"
-            android:layout_width="225dp"
+            android:layout_width="wrap_content"
             android:layout_height="56dp"
-            android:text="Hello Android!"
+            android:text="Hello Android! David Flom Chapter 3 Text Homework"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -28,21 +39,21 @@
 
         <TextView
             android:id="@+id/emailText"
-            android:layout_width="225dp"
+            android:layout_width="match_parent"
             android:layout_height="42dp"
-            android:text="TextView"
+            android:text="davidflom01@gmail.com"
             android:autoLink="email"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="35dp"
             tools:text="davidflom01@gmail.com"
-        tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/favoriteAnimalText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Type your favorite animal name"
+            android:hint="Enter your favorite animal name"
             android:inputType="textPersonName"
             android:text="" />
 
@@ -50,22 +61,26 @@
             android:id="@+id/continent"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:hint="Enter the continent where it is found"
             android:completionHint="Which Continent can you find your anilmal" />
+
+        <MultiAutoCompleteTextView
+            android:id="@+id/habitat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter the animals primary habitat"/>
 
         <Button
             android:id="@+id/continentButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Press to see your Continent" />
+            android:text="Press to see your animals information" />
 
         <TextView
             android:id="@+id/answerTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        (
-
+            android:text="" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
